Scale data using standard scaler

--- a/Transforming Data into Features/Data_to_Features.ipynb
+++ b/Transforming Data into Features/Data_to_Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +184,51 @@
     "reviews['review_date'] = pd.to_datetime(reviews.review_date)\n",
     "\n",
     "print(reviews.review_date.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.34814459,  0.44742824, -0.1896478 , ..., -0.21656679,\n",
+       "        -0.88496718, -0.07504356],\n",
+       "       [-1.24475223,  0.44742824,  0.71602461, ..., -0.21656679,\n",
+       "        -0.88496718, -0.07504356],\n",
+       "       [-0.51116416,  0.44742824,  0.71602461, ..., -0.21656679,\n",
+       "        -0.88496718, -0.07504356],\n",
+       "       ...,\n",
+       "       [-0.59267395,  0.44742824,  0.71602461, ..., -0.21656679,\n",
+       "        -0.88496718, -0.07504356],\n",
+       "       [-1.24475223,  0.44742824,  0.71602461, ..., -0.21656679,\n",
+       "        -0.88496718, -0.07504356],\n",
+       "       [ 1.68960003,  0.44742824,  0.71602461, ..., -0.21656679,\n",
+       "         1.12998541, -0.07504356]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Scaling the Data ##\n",
+    "######################\n",
+    "\n",
+    "# get numerical columns\n",
+    "reviews = reviews[['clothing_id', 'age', 'recommended', 'rating', 'Bottoms', \\\n",
+    "                   'Dresses', 'Intimate', 'Jackets', 'Tops', 'Trend']].copy()\n",
+    "\n",
+    "# reset index to clothing_id column\n",
+    "reviews = reviews.set_index('clothing_id')\n",
+    "\n",
+    "# scale data by using the standard scaler\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit_transform(reviews)\n",
+    "\n"
    ]
   }
  ],
