--- a/Predict Credit Card Fraud/credit card fraud.ipynb
+++ b/Predict Credit Card Fraud/credit card fraud.ipynb
@@ -2,29 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn\n",
+    "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import codecademylib3\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import codecademylib3\n",
-    "\n",
-    "# Load the data\n",
-    "transactions = pd.read_csv('transactions_modified.csv')\n",
-    "print(transactions.head())\n",
-    "print(transactions.info())\n",
-    "\n",
-    "# How many fraudulent transactions?\n",
-    "\n",
-    "\n",
-    "# Summary statistics on amount column\n",
     "\n",
     "\n",
     "# Create isPayment field\n",
@@ -76,11 +64,87 @@
     "\n",
     "# Show probabilities on the new transactions"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   step            1000 non-null   int64  \n",
+      " 1   type            1000 non-null   object \n",
+      " 2   amount          1000 non-null   float64\n",
+      " 3   nameOrig        1000 non-null   object \n",
+      " 4   oldbalanceOrg   1000 non-null   float64\n",
+      " 5   newbalanceOrig  1000 non-null   float64\n",
+      " 6   nameDest        1000 non-null   object \n",
+      " 7   oldbalanceDest  1000 non-null   float64\n",
+      " 8   newbalanceDest  1000 non-null   float64\n",
+      " 9   isFraud         1000 non-null   int64  \n",
+      " 10  isPayment       1000 non-null   int64  \n",
+      " 11  isMovement      1000 non-null   int64  \n",
+      " 12  accountDiff     1000 non-null   float64\n",
+      "dtypes: float64(6), int64(4), object(3)\n",
+      "memory usage: 101.7+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "282"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the data\n",
+    "transactions = pd.read_csv('transactions_modified.csv')\n",
+    "print(transactions.info())\n",
+    "transactions.head()\n",
+    "\n",
+    "# How many fraudulent transactions?\n",
+    "transactions.isFraud.sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summary statistics on amount column\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ds",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
