Clean the data and create new columns

--- a/Predict Credit Card Fraud/credit card fraud.ipynb
+++ b/Predict Credit Card Fraud/credit card fraud.ipynb
@@ -14,13 +14,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "\n",
-    "# Create isPayment field\n",
-    "\n",
-    "\n",
-    "# Create isMovement field\n",
-    "\n",
-    "\n",
     "# Create accountDiff field\n",
     "\n",
     "\n",
@@ -67,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +96,7 @@
        "282"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,12 +113,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1.000000e+03\n",
+       "mean     5.373080e+05\n",
+       "std      1.423692e+06\n",
+       "min      0.000000e+00\n",
+       "25%      2.933705e+04\n",
+       "50%      1.265305e+05\n",
+       "75%      3.010378e+05\n",
+       "max      1.000000e+07\n",
+       "Name: amount, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary statistics on amount column\n",
+    "transactions.amount.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Fatemeh\\AppData\\Local\\Temp\\ipykernel_52248\\1796571819.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  transactions.isPayment[transactions['type'].isin(['PAYMENT', 'DEBIT'])] = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Create isPayment field\n",
+    "transactions['isPayment'] = 0\n",
+    "transactions.isPayment[transactions['type'].isin(['PAYMENT', 'DEBIT'])] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Fatemeh\\AppData\\Local\\Temp\\ipykernel_52248\\1262826441.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  transactions.isMovement[transactions['type'].isin(['CASH_OUT', 'TRANSFER'])] = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Create isMovement field\n",
+    "transactions['isMovement'] = 0\n",
+    "transactions.isMovement[transactions['type'].isin(['CASH_OUT', 'TRANSFER'])] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Summary statistics on amount column\n"
+    "## Create accountDiff field\n",
+    "transactions['accountDiff'] = abs(\\\n",
+    "    transactions.oldbalanceDest - transactions.oldbalanceOrg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
