Select and split data for model

--- a/Predict Credit Card Fraud/credit card fraud.ipynb
+++ b/Predict Credit Card Fraud/credit card fraud.ipynb
@@ -12,50 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# Create accountDiff field\n",
-    "\n",
-    "\n",
-    "# Create features and label variables\n",
-    "\n",
-    "\n",
-    "# Split dataset\n",
-    "\n",
-    "\n",
-    "# Normalize the features variables\n",
-    "\n",
-    "\n",
-    "# Fit the model to the training data\n",
-    "\n",
-    "\n",
-    "# Score the model on the training data\n",
-    "\n",
-    "\n",
-    "# Score the model on the test data\n",
-    "\n",
-    "\n",
-    "# Print the model coefficients\n",
-    "\n",
-    "\n",
-    "# New transaction data\n",
-    "transaction1 = np.array([123456.78, 0.0, 1.0, 54670.1])\n",
-    "transaction2 = np.array([98765.43, 1.0, 0.0, 8524.75])\n",
-    "transaction3 = np.array([543678.31, 1.0, 0.0, 510025.5])\n",
-    "\n",
-    "# Create a new transaction\n",
-    "\n",
-    "\n",
-    "# Combine new transactions into a single array\n",
-    "\n",
-    "\n",
-    "# Normalize the new transactions\n",
-    "\n",
-    "\n",
-    "# Predict fraud on the new transactions\n",
-    "\n",
-    "\n",
-    "# Show probabilities on the new transactions"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -188,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,10 +156,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create features and label variables\n",
+    "features = transactions[['amount', 'isPayment', 'isMovement', 'accountDiff']]\n",
+    "label = transactions.isFraud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split dataset\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\\\n",
+    "    features, label, test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Normalize the features variables\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the model to the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Score the model on the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Score the model on the test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print the model coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New transaction data\n",
+    "transaction1 = np.array([123456.78, 0.0, 1.0, 54670.1])\n",
+    "transaction2 = np.array([98765.43, 1.0, 0.0, 8524.75])\n",
+    "transaction3 = np.array([543678.31, 1.0, 0.0, 510025.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new transaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine new transactions into a single array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize the new transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict fraud on the new transactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Show probabilities on the new transactions"
+   ]
   }
  ],
  "metadata": {
