--- a/Predict Credit Card Fraud/credit card fraud.ipynb
+++ b/Predict Credit Card Fraud/credit card fraud.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,49 +281,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a new transaction"
+    "# Create a new transaction\n",
+    "your_transaction = np.array([320768.65, 0.0, 1.0, 40083.3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combine new transactions into a single array"
+    "# Combine new transactions into a single array\n",
+    "sample_transactions = np.stack((transaction1, transaction2, transaction3, your_transaction))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Fatemeh\\Anaconda3\\envs\\ds\\lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Normalize the new transactions"
+    "# Normalize the new transactions\n",
+    "sample_transactions = scaler.transform(sample_transactions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Predict fraud on the new transactions"
+    "# Predict fraud on the new transactions\n",
+    "predictions = model.predict(sample_transactions)\n",
+    "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.55112259, 0.44887741],\n",
+       "       [0.99787624, 0.00212376],\n",
+       "       [0.9963797 , 0.0036203 ],\n",
+       "       [0.46391882, 0.53608118]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
-    "# Show probabilities on the new transactions"
+    "# Show probabilities on the new transactions\n",
+    "predictions_prob = model.predict_proba(sample_transactions)\n",
+    "predictions_prob"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
