Create and evaluate logistic regression model

--- a/Income Classification/Income Classification.ipynb
+++ b/Income Classification/Income Classification.ipynb
@@ -266,14 +266,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 0, 0, 1])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create output variable y which is binary, 0 when income is less \n",
     "# than 50k, 1 when it is greater than 50k\n",
     "y = np.where(df.income=='<=50K', 0, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into a train and test set\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
+    "\n",
+    "# Fit LR model with sklearn on train set, and predicting on the test set\n",
+    "log_reg = LogisticRegression(C=0.05, penalty='l1', solver='liblinear')\n",
+    "log_reg.fit(x_train, y_train)\n",
+    "y_pred = log_reg.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Parameters, Intercept:\n",
+      "-5.574051102075731\n",
+      "Model Parameters, Coeff:\n",
+      "[[ 3.66708108e-02  3.14736715e-04  6.66324552e-04  2.79789951e-02\n",
+      "   4.03738514e-03  1.02914892e+00  0.00000000e+00 -3.58823309e-01\n",
+      "   0.00000000e+00  7.67872580e-02 -5.77048523e-01  0.00000000e+00\n",
+      "   0.00000000e+00 -4.02644319e-01 -8.95040241e-01 -5.03321517e-01\n",
+      "   5.72662895e-01  5.45591599e-01  1.28022992e+00  1.79634501e+00\n",
+      "   0.00000000e+00  1.59701097e+00  0.00000000e+00  1.82336836e+00\n",
+      "   3.83093437e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print model parameters (intercept and coefficients)\n",
+    "print('Model Parameters, Intercept:')\n",
+    "print(log_reg.intercept_[0])\n",
+    "print('Model Parameters, Coeff:')\n",
+    "print(log_reg.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[4778  248]\n",
+      " [ 880  607]]\n",
+      "Accuracy Score:\n",
+      "0.8268079226163059\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the predictions of the model on the test set. \n",
+    "# Print the confusion matrix and accuracy score.\n",
+    "print('Confusion Matrix:')\n",
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "print('Accuracy Score:')\n",
+    "print(log_reg.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
