Splitting data into training and validating sets

--- a/Cancer Classifier/Cancer classifier.ipynb
+++ b/Cancer Classifier/Cancer classifier.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dataset\n",
-    "from sklearn.datasets import load_breast_cancer\n"
+    "from sklearn.datasets import load_breast_cancer\n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -73,8 +74,31 @@
     }
    ],
    "source": [
+    "# printing the labels\n",
     "print(breast_cancer_data.target)\n",
     "print(breast_cancer_data.target_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "455 455\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split data into training and validating sets\n",
+    "training_data, validation_data, training_labels, validation_labels = \\\n",
+    "    train_test_split(breast_cancer_data.data, breast_cancer_data.target,\\\n",
+    "                      test_size=0.2, random_state=100)\n",
+    "\n",
+    "print(len(training_data), len(training_labels))"
    ]
   },
   {
