--- a/Handwriting Recognition using K-Means/Handwriting recognition using K-Means.ipynb
+++ b/Handwriting Recognition using K-Means/Handwriting recognition using K-Means.ipynb
@@ -277,6 +277,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create array of new samples for a 4 digit number\n",
+    "new_samples = np.array([[0.00,0.07,0.76,0.76,0.45,0.00,0.00,0.00,0.66,\n",
+    "                         6.35,7.62,7.62,7.31,2.40,0.00,0.00,2.66,7.62,\n",
+    "                         3.32,2.35,6.33,7.24,0.66,0.00,0.51,2.82,0.07,\n",
+    "                         0.07,4.72,7.55,1.13,0.00,0.00,0.28,3.11,5.97,\n",
+    "                         7.62,5.61,1.90,1.14,0.00,2.28,7.62,7.62,7.62,\n",
+    "                         7.62,7.62,5.08,0.00,0.13,1.52,1.52,1.52,1.52,\n",
+    "                         1.52,0.45,0.00,0.00,0.00,0.00,0.00,0.00,0.00,\n",
+    "                         0.00],\n",
+    "                         [0.00,1.27,3.05,2.89,0.30,0.00,0.00,0.00,3.80,\n",
+    "                          7.48,7.62,7.62,6.39,0.46,0.00,0.00,7.62,5.02,\n",
+    "                          0.66,2.25,7.40,5.40,0.00,0.00,5.84,0.00,0.00,\n",
+    "                          0.00,3.66,7.62,3.73,0.00,7.62,2.86,0.00,0.00,\n",
+    "                          0.28,5.25,7.62,0.68,5.87,7.55,4.72,0.50,0.00,\n",
+    "                          3.72,7.62,0.46,0.23,4.57,7.47,7.01,5.87,7.55,\n",
+    "                          5.62,0.00,0.00,0.00,1.65,5.03,5.33,4.12,0.45,\n",
+    "                          0.00],\n",
+    "                          [0.00,0.00,0.00,0.00,0.00,0.00,0.00,0.00,0.00,\n",
+    "                           0.15,4.71,7.39,7.62,3.96,0.00,0.00,0.00,3.57,\n",
+    "                           7.62,4.87,5.25,7.55,0.61,0.00,0.00,3.80,7.38,\n",
+    "                           0.00,2.28,7.62,1.52,0.00,0.00,0.68,1.60,0.00,\n",
+    "                           3.05,7.62,1.28,0.00,0.00,0.00,1.20,4.03,7.31,\n",
+    "                           6.78,0.38,0.00,0.00,0.00,6.70,7.62,7.62,7.62,\n",
+    "                           4.49,0.00,0.00,0.00,1.20,2.29,2.29,2.29,0.91,\n",
+    "                           0.00],\n",
+    "                           [0.00,2.19,2.82,1.13,0.00,0.00,0.00,0.00,4.34,\n",
+    "                            7.62,7.62,7.55,3.48,0.00,0.00,0.00,6.09,5.86,\n",
+    "                            1.10,5.53,7.62,3.93,0.00,0.00,6.10,5.48,0.00,\n",
+    "                            0.07,6.63,6.41,0.00,0.00,4.86,7.40,0.46,0.00,\n",
+    "                            5.17,6.52,0.00,0.00,1.64,7.62,5.44,1.90,6.33,\n",
+    "                            6.61,0.00,0.00,0.00,3.42,7.62,7.62,7.24,2.41,\n",
+    "                            0.00,0.00,0.00,0.00,1.27,1.52,0.53,0.00,0.00,\n",
+    "                            0.00]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 8 1 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict the label of the 4 digit number\n",
+    "new_labels = model.predict(new_samples)\n",
+    "print(new_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7904"
+     ]
+    }
+   ],
+   "source": [
+    "# Map out the labels with each digit based on visualisation\n",
+    "for i in range(len(new_labels)):\n",
+    "  if new_labels[i] == 0:\n",
+    "    print(2, end='')\n",
+    "  elif new_labels[i] == 1:\n",
+    "    print(0, end='')\n",
+    "  elif new_labels[i] == 2:\n",
+    "    print(1, end='')\n",
+    "  elif new_labels[i] == 3:\n",
+    "    print(8, end='')\n",
+    "  elif new_labels[i] == 4:\n",
+    "    print(7, end='')\n",
+    "  elif new_labels[i] == 5:\n",
+    "    print(6, end='')\n",
+    "  elif new_labels[i] == 6:\n",
+    "    print(3, end='')\n",
+    "  elif new_labels[i] == 7:\n",
+    "    print(5, end='')\n",
+    "  elif new_labels[i] == 8:\n",
+    "    print(9, end='')\n",
+    "  elif new_labels[i] == 9:\n",
+    "    print(4, end='')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
