--- a/Random Forests Project/Random forest project.ipynb
+++ b/Random Forests Project/Random forest project.ipynb
@@ -190,12 +190,83 @@
     }
    ],
    "source": [
+    "# Define column names\n",
     "col_names = ['age', 'workclass', 'fnlwgt','education', 'education-num', \n",
     "'marital-status', 'occupation', 'relationship', 'race', 'sex',\n",
     "'capital-gain','capital-loss', 'hours-per-week','native-country', 'income']\n",
     "\n",
+    "# Read in the data\n",
     "df = pd.read_csv('adult.data', header=None, names=col_names)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Investigate the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "income\n",
+       " <=50K    0.75919\n",
+       " >50K     0.24081\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate distribution of income values\n",
+    "df.income.value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove extra space at the beginning of all strings\n",
+    "for col in df.columns:\n",
+    "    if df[col].dtype == 'O':\n",
+    "        df[col] = df[col].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert categorical features to dummy variables\n",
+    "feature_cols = ['age', 'capital-gain', 'capital-loss', 'hours-per-week', 'sex','race']\n",
+    "\n",
+    "X = pd.get_dummies(df[feature_cols], drop_first=True)\n",
+    "\n",
+    "# Create output variable\n",
+    "y = np.where(df.income == '<=50K', 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into train and test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
+    "                                                    test_size=0.2, random_state=1)"
    ]
   },
   {
