--- a/Build a Book Recommender System/Build a book recommender.ipynb
+++ b/Build a Book Recommender System/Build a book recommender.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "import pandas as pd\n",
-    "from surprise import Reader"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +75,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +102,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,10 +126,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5. Load `book_ratings` into a Surprise Dataset\n",
+    "from surprise import Dataset\n",
+    "rec_data = Dataset.load_from_df(book_ratings[['user_id',\n",
+    "                                              'book_id',\n",
+    "                                              'rating']],\n",
+    "                                reader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#6. Create a 80:20 train-test split and set the random state to 7\n",
+    "from surprise.model_selection import train_test_split\n",
+    "trainset, testset = train_test_split(rec_data, test_size=0.2, \n",
+    "                                     random_state=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#7. Use KNNBasice from Surprise to train a collaborative filter\n",
+    "from surprise import KNNBasic\n",
+    "book_recommender = KNNBasic()\n",
+    "book_recommender.fit(trainset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8. Evaluate the recommender system\n",
+    "from surprise import accuracy\n",
+    "predictions = book_recommender.test(testset)\n",
+    "accuracy.rmse(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.8250739644970415"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#9. Prediction on a user who gave the \"The Three-Body Problem\" a rating of 5\n",
+    "book_recommender.predict('8842281e1d1347389f2ab93d60773d4d', '18007564').est"
+   ]
   }
  ],
  "metadata": {
