Making the training and test sets

--- a/Email Similarity/Email similarity.ipynb
+++ b/Email Similarity/Email similarity.ipynb
@@ -123,6 +123,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into training and test sets\n",
+    "train_emails = fetch_20newsgroups(categories = ['rec.sport.baseball', 'rec.sport.hockey'],\n",
+    "                                  subset='train', shuffle=True, random_state=108)\n",
+    "\n",
+    "test_emails = fetch_20newsgroups(categories = ['rec.sport.baseball', 'rec.sport.hockey'],\n",
+    "                                  subset='test', shuffle=True, random_state=108)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
