Testing the classifier on other datasets

--- a/Email Similarity/Email similarity.ipynb
+++ b/Email Similarity/Email similarity.ipynb
@@ -223,6 +223,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into training and test sets for new categories\n",
+    "train_emails = fetch_20newsgroups(categories = ['comp.sys.ibm.pc.hardware','rec.sport.hockey'],\n",
+    "                                  subset='train', shuffle=True, random_state=108)\n",
+    "\n",
+    "test_emails = fetch_20newsgroups(categories = ['comp.sys.ibm.pc.hardware','rec.sport.hockey'],\n",
+    "                                  subset='test', shuffle=True, random_state=108)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9974715549936789"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Run previous steps tp check its accuracy for the new categories\n",
+    "\n",
+    "# Create CounterVectorizer and fit it to the possible words that can exist in the emails\n",
+    "counter = CountVectorizer()\n",
+    "\n",
+    "counter.fit(test_emails.data + train_emails.data)\n",
+    "\n",
+    "# Make 2 lists of the counts of the words in the training and test sets\n",
+    "train_counts = counter.transform(train_emails.data)\n",
+    "\n",
+    "test_counts = counter.transform(test_emails.data)\n",
+    "\n",
+    "# Initiate the Naive Bayes Classifier and fit it to the training data\n",
+    "classifier = MultinomialNB()\n",
+    "\n",
+    "classifier.fit(train_counts, train_emails.target)\n",
+    "\n",
+    "# Test the classifier based on accuracy\n",
+    "accuracy = classifier.score(test_counts, test_emails.target)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
