--- a/Perceptron Logic Gates/Perceptron logic gates.ipynb
+++ b/Perceptron Logic Gates/Perceptron logic gates.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,82 @@
    "metadata": {},
    "source": [
     "The data is linearly separable because you can draw a straight line that completely separates the points of each class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Build perceptron to learn AND\n",
+    "# max_iter sets the number of times the perceptron loops through the training data.\n",
+    "classifier = Perceptron(max_iter=40, random_state=22)\n",
+    "\n",
+    "# Train the model\n",
+    "classifier.fit(data, labels)\n",
+    "\n",
+    "# Check .score to see if the algorithm learned AND\n",
+    "classifier.score(data, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change the labels so data represents the XOR gate\n",
+    "labels = [0, 1, 1, 0]\n",
+    "\n",
+    "# check .score with XOR labels\n",
+    "classifier.score(data, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change the labels so data represents the OR gate\n",
+    "labels = [0, 1, 1, 1]\n",
+    "\n",
+    "# check .score with XOR labels\n",
+    "classifier.score(data, labels)"
    ]
   },
   {
